grails-app/assets/stylesheets/sass/pages/task/_taskResultPrint.scss
@import 'taskResult';

@page {
    margin: 0cm;
}

.sticky-header {
    .header {
        height: 40px;
    }

}

.task-result-content {
    margin-top: 140px;
}

.info-container {
    width: 100%;
    height: 55px;

    .title {
        display: inline;
        font-size: 16px;
        margin-right: 8px;
        margin-top: 0;
    }

    .sub-info-panel {
        //min-width: 400px;
        color: #333;
        display: inline-block;

        .status {
            color: #333;
            font-size: 11px;
            font-weight: 500;
        }

        .complete-time {
            font-size: 11px;
            font-weight: 700;
        }

        .name {
            color: #333;
            font-size: 11px;
            font-weight: 700;
        }

        .id {
            margin-right: 10px;
            font-size: 11px;
            font-weight: 500;

            &.only-id {
                margin-right: 0;
            }
        }

        .birthday {
            .icon {
                margin-right: 5px ;
            }
            font-size: 11px;
            font-weight: 500;
        }
    }

}


.download {
    display: none;
}

.result-info {
    height: 35px;
    -webkit-print-color-adjust: exact;
    background-color: #335d70 !important;
    color: white !important;
    padding-top: 12px;

    .score-des {
        display: inline;
        font-size: 12px;
        width: 100%;
    }
    .score-num {
        width: 100%;
        display: inline;
        font-size: 12px;
    }
}

